[tool.poetry]
name = "gh-test-alpha"
version = "0.1.1"
description = ""
authors = ["Jason Roark <roarkj2@vcu.edu>"]
readme = "README.md"
packages = [{include = "greet"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
importlib = "^1.0.4"

[tool.poetry.scripts]
greet = "greet.main:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
